# blinkplus

./: .gitignore  CMakeLists.txt  NOTE.md  README.md
blinkplus_examples/: allreduce_timing.sh  broadcast_timing.sh  run_baseline_broadcast.cu  run_blinkplus.cu  run_blinkplus_allreduce.cu  run_blinkplus_broadcast.cu  run_nccl.cu  run_nccl_allreduce.cu
cmake/: Findnccl.cmake
examples/: CMakeLists.txt  demo.cu  demo_group01.cu  mock_blinkplus_2group01.cu  mock_blinkplus_full_complex.cu  mock_blinkplus_full_simple.cu  mock_blinkplus_group01_group02.cu  mock_blinkplus_group01_group02_group03.cu  mock_blinkplus_group01_group23.cu  test_launchkernel.cu
examples/cmake/: Findnccl.cmake
graphs/: chain0123.xml  chain02.xml  chain03.xml  chain031.xml  chain123.xml  chain23.xml  graph0123.xml  topology.xml
graphs/user01/: chain01.xml  chain021.xml  chain0321.xml
graphs/user02/: chain012.xml  chain032.xml
graphs/user03/: chain013.xml  chain023.xml
graphs/user12/: chain102.xml  chain12.xml  chain132.xml
graphs/user13/: chain103.xml  chain123.xml
graphs/user23/: chain203.xml  chain2103.xml  chain213.xml
include/: blinkplus.h
nccl_examples/: CMakeLists.txt  INSTALL.md  mock_blinkplus_2group01.cu  mock_blinkplus_full_complex.cu  mock_blinkplus_full_simple.cu  mock_blinkplus_group01_group02.cu  mock_blinkplus_group01_group02_group03.cu  mock_blinkplus_group01_group23.cu  nccl_gpu0123.cu
nccl_examples/cmake/: Findnccl.cmake
src/: blinkplus.cu
test_bandwidth/: blinkplus_optimal_allreduce_timing.sh  blinkplus_optimal_broadcast_timing.sh  nccl_allreduce_timing.sh  nccl_broadcast_timing.sh  time_blinkplus_allreduce.cu  time_blinkplus_broadcast.cu  time_blinkplus_broadcast_user01_3group.cu  time_nccl_allreduce.cu  time_nccl_allreduce_user01_3group.cu  time_nccl_allreduce_user03_3group.cu  time_nccl_broadcast_2gpu.cu  time_nccl_broadcast_3gpu.cu  time_nccl_broadcast_user01_2group.cu  time_nccl_broadcast_user01_3group.cu  time_nccl_broadcast_user01_3group_complex.cu  time_nccl_broadcast_user01_4group.cu  time_nccl_broadcast_user02_2group.cu  time_nccl_broadcast_user02_3group.cu  time_nccl_broadcast_user02_4group.cu  time_nccl_broadcast_user03_3group.cu  time_nccl_broadcast_user03_4group.cu
visualization/: benchmark.ipynb  test_bandwidth.ipynb
visualization/.ipynb_checkpoints/: benchmark-checkpoint.ipynb
